Mon Aug 30 15:31:37 2010  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, help/C/gel-function-list.xml:
	  Hand apply some changes from Christian Kirbach
	  (christian.kirbach at googlemail dot com) to fix typos

	* lib/*/*.gel, src/funclib.c:  Fix some typos.  Fix spelling of the
	  function name AuxiliaryUnitMatrix!

Mon Aug 30 14:43:41 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, configure.in: Apply patch from
	  Jan de Groot jan at jgc.homeip.net to port the GnomeVFS stuff
	  to GIO.  This raises the glib requirement to 2.16 for the gnome
	  version.  When built without gnome then 2.12 is all that is needed
	  still.

Mon Aug 30 13:41:49 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: ExpandMatrix,SetMatrixSize,ColumnsOf,RowsOf,
	  IsMatrix* accept null as the input (0x0) matrix and act accordingly

	* src/geniustests.txt: Add tests

Mon Aug 30 13:28:23 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add "legend" style parameter to LinePlotDrawLine

	* lib/equation_solving/diffeqs.gel: Add RungeKuttaFull and
	  EulersMethodFull which return all points computed (and slightly
	  optimize Runge-Kutta)
	
	* src/geniustests.txt, help/C/*.xml: update

Mon Aug 30 10:23:49 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Patch from Vincent Untz to fix access to sealed
	  vte structure members

Tue Jun 29 11:38:38 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add SurfacePlotVariableNames and some fixes

	* help/C/*.xml: document above and some fixes

Tue Jun 29 11:11:04 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: allow changing variable names for surfaces when
	  plotting from a dialog

Sat Feb 27 16:57:50 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: check events every time we get something from
	  readline.  That way, the new line from "return" is truly
	  synchroneous.  (it was in the wrong place for commands, even though