@@ -2,6 +2,7 @@
 # Please keep this file sorted alphabetically.
 lib/library-strings.c
 src/calc.c
+src/calc.h
 src/compil.c
 src/eval.c
 src/funclib.c
