@@ -1,3 +1,7 @@
+Mon Aug 30 22:33:01 2010  Jiri (George) Lebl <jirka@5z.com>
+
+	* cs.po: update
+
 Mon Aug 30 16:05:32 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* cs.po: update
