@@ -1,3 +1,8 @@
+Mon Aug 30 22:33:08 2010  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/calc.h, ssrc/funclib.c, src/genius.c, src/gnome-genius.c:
+	  update copyright string and make it translatable
+
 Mon Aug 30 15:31:37 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml, help/C/gel-function-list.xml:
